--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -46,12 +46,13 @@
         <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
-            <li class="comments_list">
+            <%# <li class="comments_list"> %>
             <% @comments.each do |comment| %>
+              <li class="comments_list">
                <%= comment.text %>
                <%= link_to comment.user.name, user_path(@prototype.user.id), class: :comment_user %>
+              </li>
             <% end %>
-            </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
       </div>
